# job-search-intelligence

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/app/: config.py  main.py
backend/evals/: __init__.py  golden_set.jsonl  run_eval.py
backend/scripts/: __init__.py  generate_openapi.py  run_pipeline_diagnostic.py
backend/tests/: test_aggregation_service.py  test_alembic_migrations.py  test_api_errors.py  test_app_factory.py  test_application_detail_api.py  test_application_grouping_key.py  test_application_lock_reset_api.py  test_application_lock_reset_service.py  test_application_split_api.py  test_attention_api.py  test_azure_openai_provider.py  test_backfill_state.py  test_chat_agent_llm.py  test_chat_backend.py  test_chat_history_api.py  test_chat_turn_persistence.py  test_classification_dtos.py  test_classification_estimate_api.py  test_classification_pipeline.py  test_classification_prompt_contract.py  test_classification_reprocessing_api.py  test_classification_run_api.py  test_classification_run_repository.py  test_classification_service.py  test_company_normalization.py  test_company_profile_repository.py  test_config.py  test_connection_service.py  test_diagnostics_fixture.py  test_diagnostics_service.py  test_domain_dtos.py  test_email_candidate_query.py  test_email_chunking_service.py  test_email_provider_contract.py  test_email_repository.py  test_env_example.py  test_eval_runner.py  (+78 more)
(+684 files in other folders)
