[project]
name = "job-search-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for the local-first job-search intelligence app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "keyring>=25.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.8",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
# JT-006 owns mypy defaults; JT-005 owns Ruff defaults in ruff.toml.
# Later Phase 0 tickets add backend project metadata.
python_version = "3.12"
files = ["app", "evals", "scripts", "tests"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true
